[r=blake-rouse][bug=1565727,1565731,1565734,1565735,1565736,1565741,1565743,1565747][author=ricgard] Resolve design issues on node details / controller details, VLAN DHCP and spacing and global link elements

--- a/src/maasserver/static/scss/maas/base/_base.scss
+++ b/src/maasserver/static/scss/maas/base/_base.scss
@@ -54,12 +54,10 @@ ol {
     margin-left: 0;
 }
 
-a {
-  cursor: pointer;
-}
-
-a.link--alt {
-  color: #333;
+a:link,
+a:visited {
+  color: $cool-grey;
+  text-decoration: none;
   border-bottom: 1px solid #CDCDCD;
 
   &:hover {
