--- a/src/maasserver/static/scss/maas/components/_accordion.scss
+++ b/src/maasserver/static/scss/maas/components/_accordion.scss
@@ -76,6 +76,7 @@
                         width: 100%;
                         display: inline-block;
                         padding-right: 20px;
+                        border-bottom: 0;
 
                         &:hover {
                             color: $ubuntu-orange;
